# pre-commit-hooks

./: .pre-commit-hooks.yaml  CONTRIBUTING.md  GitVersion.yml  LICENSE  README.md  requirements-dev.txt  setup.cfg
pre_commit_hooks/: disable_periodic_background_checks.py  erase_data_loader_keys.py  erase_vendor_code.py
testing/resources/: envelope_project_bad.prjx  envelope_project_ok.prjx
tests/: erase_data_loader_keys_test.py
