[metadata]
name = Pre_Commit hooks
version = 1.0.0
description = Some useful hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mircodariol/pre-commit-hooks
author = Mirco Dariol
author_email = dariol.mirco@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    lxml>=5.3.0
    virtualenv>=20.10.0
python_requires = >=3.9

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    disable-periodic-background-checks = pre_commit_hooks.disable_periodic_background_checks:main
    erase-data-loader-keys = pre_commit_hooks.erase_data_loader_keys:main
    erase-vendor-code = pre_commit_hooks.erase_vendor_code:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
